# user/src/main/java/dev/shade/infrastructure/api/user/ApiUserMapper.java
@@ -2,7 +2,6 @@ package dev.shade.infrastructure.api.user;
 
 import dev.shade.domain.user.User;
 import dev.shade.service.user.model.UserApiBean;
-import dev.shade.service.user.model.UserCreationRequestApiBean;
 import dev.shade.service.user.model.UserUpdateRequestApiBean;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -10,12 +9,7 @@ import org.mapstruct.Mapping;
 @Mapper(componentModel = "spring")
 public interface ApiUserMapper {
 
-    @Mapping(target = "role", ignore = true)
-    @Mapping(target = "isAccountNonLocked", ignore = true)
-    @Mapping(target = "id", ignore = true)
-    @Mapping(target = "audit", ignore = true)
-    User mapToUser(UserCreationRequestApiBean user);
-
+    @Mapping(target = "password", ignore = true)
     @Mapping(target = "role", ignore = true)
     @Mapping(target = "isAccountNonLocked", ignore = true)
     @Mapping(target = "id", ignore = true)
